# diffusers-recipes

./: .gitignore  README.md  pyproject.toml
models/anima/: README.md
models/anima/scripts/: base_t2i_example.py  t2i_sdnq.py
models/ernie_image/: README.md
models/ernie_image/scripts/: base.py  sdnq_quantized.py
models/ernie_image_turbo/: README.md
models/ernie_image_turbo/scripts/: base.py  sdnq_quantized.py
models/flux2_dev/: README.md
models/flux2_dev/scripts/: base_t2i_example.py  t2i_managed.py  t2i_sdnq_cpu_offload.py  t2i_sdnq_cpu_offload_test.py  t2i_sdnq_managed.py
models/flux2_klein_9B/: README.md
models/flux2_klein_9B/scripts/: base_example.py  i2i_multiple_sdnq_4bit_both_cpu_offload.py  i2i_sdnq_4bit_both_cpu_offload.py  t2i_bnb_4bit_both_cpu_offload.py  t2i_sdnq_4bit_both_cpu_offload.py
models/glm-image/: README.md
models/glm-image/scripts/: base_example.py  model_cpu_offload.py  sdnq_4bit_dynamic.py
models/krea2_turbo/: README.md
models/krea2_turbo/scripts/: base_t2i_example.py  t2i_group_offload.py  t2i_sdnq.py
models/ltx2/: README.md  base_t2v_example.py  t2v_bnb-4bit-both_cpu_offload.py  t2v_group_offloading.py  t2v_layerwise.py
models/ltx2_3/: README.md
models/qwen-image/: README.md  base_example.py  bnb-4bit-both_cpu_offload.py  model_cpu_offload.py  pipeline_leaf_group_offload.py  pipeline_leaf_stream_group_offload_record.py
models/qwen-image-edit-plus/: README.md  base_example.py  layerwise.py  sdnq_uint4._py  sdnq_uint4.py
models/qwen-image-layered/: README.md  benchmark_results.csv
models/qwen_image_2512/: README.md
models/qwen_image_edit_2511/: README.md
models/z-image/: README.md
(+99 files in other folders)
