[project]
name = "diffusers-recipes"
version = "0.1.0"
description = "Recipes for using diffusers with different optimizations."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "diffusers>=0.39.0.dev0",
    "diffusers-mm>=0.2.1",
    "peft>=0.19.1",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchcodec>=0.14.0",
    "torchvision>=0.27.0",
    "transformers>=5.12.0",
]

[project.optional-dependencies]
benchmark = [
    "nvidia-ml-py>=13.610.43",
]
quantization = [
    "bitsandbytes>=0.49.2",
    "torchao>=0.17.0",
    "gguf>=0.19.0",
    "sdnq>=0.1.9",
]
attentions = [
    "kernels>=0.12.0,<0.13",
]
video = [
  "av>=17.1.0",
]
all = [
  "nvidia-ml-py>=13.610.43",
  "bitsandbytes>=0.49.2",
  "torchao>=0.17.0",
  "gguf>=0.19.0",
  "sdnq>=0.1.9",
  "kernels>=0.12.0,<0.13",
  "av>=17.1.0",
]

[tool.ruff]
line-length = 119

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
diffusers = { git = "https://github.com/huggingface/diffusers", rev = "f7f1f6304d90215122e43544e36f4f894ec66d4c" }
